apps/creative-crawl-telemetry/src/k8s/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegraf
  namespace: creative-crawl
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: telegraf
      app.kubernetes.io/instance: telegraf
  template:
    metadata:
      labels:
        app.kubernetes.io/name: telegraf
        app.kubernetes.io/instance: telegraf
    spec:
      containers:
        - name: telegraf
          image: "docker.io/library/telegraf:1.34-alpine"
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /etc/telegraf
      volumes:
        - name: config
          configMap:
            name: telegraf

---
apiVersion: v1
kind: Service
metadata:
  name: telegraf-telemetry-feed
  namespace: creative-crawl
spec:
  selector:
    app.kubernetes.io/name: telegraf
  ports:
    - port: 8080
      protocol: TCP
      targetPort: http
